# fc-emu

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
scripts/: package_macos_app.sh
src/: app.rs  bus.rs  emulator.rs  input.rs  lib.rs  main.rs  rom.rs  save_state.rs  window.rs
src/apu/: channel.rs  mixer.rs  mod.rs
src/cpu/: addressing.rs  mod.rs  opcode.rs  status.rs
src/mapper/: mapper0.rs  mod.rs
src/ppu/: mod.rs
