[package]
name = "fc-emu"
version = "0.1.0"
edition = "2024"
default-run = "fc-emu"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
cpal = "0.17.3"
pixels = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
winit = "0.30.13"

[profile.dev]
opt-level = 2
